--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
+# DB Config
 DB_USERNAME=root
 DB_PASSWORD=
 DB_HOST=localhost
 DB_DATABASE=auth
 DB_DIALECT=mysql
+
+# Auth Config
+AUTH_SECRET=trolololo
+AUTH_EXPIRES=1d
+AUTH_ROUNDS=10
